Adjust search
When the tree starts the search the root node does
not need to be passed as param as it will start on the root.

Add a constructor for Record, to avoid mutations;

Add language preview settings to enable IO